Fix Image alignment spacings

--- a/sass/base/elements.scss
+++ b/sass/base/elements.scss
@@ -160,7 +160,6 @@ img {
 
   main#content & {
     border: 1px solid #785fa0;
-    margin-bottom: 0.5em;
   }
 }
 main#content .align-left {
